--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="src\assets\images\favicon.ico" />
+    <link rel="icon" type="image" href="src\assets\images\png-transparent-nike-logo-nike-swoosh-shoe-sneakers-logo-nike-orange-computer-wallpaper-adidas.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nike -working </title>
   </head>
